fix: logo title letter spacing

--- a/src/components/Logo/style.module.css
+++ b/src/components/Logo/style.module.css
@@ -3,7 +3,7 @@
     --border-size-minus: -3px;
     --border-color: #3d63b7;
     color:#fac705;
-    letter-spacing: '0.4rem';
+    letter-spacing: 0.4rem;
     text-shadow: var(--border-size-minus) var(--border-size-minus) 0 var(--border-color),
                  var(--border-size) var(--border-size-minus) 0 var(--border-color),
                  var(--border-size-minus) var(--border-size) 0 var(--border-color),
